# Local-Rag-ChromaDB-TF-IDF

./: .gitignore  README.md  app.py  download_data.py  pyproject.toml  tf_idf_rag.py
